--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.6",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "reactstrap": "^9.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
